--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -1,15 +1,12 @@
-<div class="nav-padding" fxLayout="row" fxLayoutAlign="space-between center">
-  <div>
-    <h2>Template Admin</h2>
-  </div>
-  <div fxLayoutGap="10px">
-    
-    <button (click)="goHome()" mat-stroked-button color="primary">
-      CANCEL
-    </button>
-    
-  </div>
-</div>
-<div class="content" fxLayout="column">
-  
+<div class="column" fxFlexFill>
+  <mat-sidenav-container class="list-container" [ngStyle]="{'background-color': appService.canvasBackground}" (backdropClick)="close('backdrop')"
+    autosize>
+    <mat-sidenav #sidenav (keydown.escape)="close('escape')" class="list-menu" mode="over" [(opened)]="appService.isListMenu" position="end">
+      <app-form-lists></app-form-lists>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <app-list-run *ngIf="!appService.isData" [formObj]=appService.formObj></app-list-run>
+      <app-data *ngIf="appService.isData"></app-data>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
